# scp_ecg_rw

./: .gitignore  CMakeLists.txt  ECGTool.cpp  ECGTool.h  GDB_debug.md  IECGFormat.h  Readme.md  SCP-ECG格式说明.md  ScpGlobal.h  TestScpEcgWriter.cpp  pre-commit.sh
ECGDemographics/: AcquiringDeviceID.cpp  AcquiringDeviceID.h  Date.cpp  Date.h  DemographicEnumrations.h  Drug.cpp  Drug.h  IDemographic.h
ECGDiagnostic/: IDiagnostic.h  Statements.cpp  Statements.h
ECGGlobalMeasurements/: GlobalMeasurement.cpp  GlobalMeasurement.h  GlobalMeasurements.cpp  GlobalMeasurements.h  IGlobalMeasurement.h  Spike.cpp  Spike.h
ECGLeadMeasurements/: ILeadMeasurement.h  LeadMeasurement.cpp  LeadMeasurement.h  LeadMeasurements.cpp  LeadMeasurements.h  MeasurementType.h  Morphology.h
ECGSignals/: ISignal.h  LeadType.h  QRSZone.cpp  QRSZone.h  Signal.cpp  Signal.h  Signals.cpp  Signals.h
SCP/: SCPDate.cpp  SCPDate.h  SCPFormat.cpp  SCPFormat.h  SCPSection.cpp  SCPSection.h  SCPSection0.cpp  SCPSection0.h  SCPSection1.cpp  SCPSection1.h  SCPSection10.cpp  SCPSection10.h  SCPSection11.cpp  SCPSection11.h  SCPSection2.cpp  SCPSection2.h  SCPSection3.cpp  SCPSection3.h  SCPSection4.cpp  SCPSection4.h  SCPSection5.cpp  SCPSection5.h  SCPSection6.cpp  SCPSection6.h  SCPSection7.cpp  SCPSection7.h  SCPSection8.cpp  SCPSection8.h  SCPSectionUnkown.cpp  SCPSectionUnkown.h  SCPTime.cpp  SCPTime.h
SCP-ECG example/: test.scp
Tools/: BytesTool.cpp  BytesTool.h  CRCTool.cpp  CRCTool.h
doc/: GDB_debug.md  SCP-ECG格式说明.md
tests/: CMakeLists.txt  main.cpp  ut_SCPFormat.cpp
tests/unit_test/: ut_SCPSection0.cpp
